--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/header"); -%>
 
     <h1>Home</h1>
-    <p> <%= startingContent %> </p>
+    <p> <%= startingContent %> &#128516 </p>
 
   <% const arr= posts; %>
   <%  arr.forEach(function(post){ %>
